# gogoanime-api

./: Cargo.toml  Dockerfile  README.md
scrape/: Cargo.toml
scrape/src/: error_struct.rs  gogoanime.rs  lib.rs
scrape/src/anime_list/: mod.rs  model.rs
scrape/src/detail/: mod.rs  model.rs
scrape/src/episode/: mod.rs  model.rs
scrape/src/genre/: mod.rs  model.rs
scrape/src/genre_list/: mod.rs  model.rs
scrape/src/home/: mod.rs  model.rs  parse.rs
scrape/src/new_release/: mod.rs  model.rs
scrape/src/new_season/: mod.rs  model.rs
scrape/src/popular/: mod.rs  model.rs
scrape/src/popular_ogoing/: mod.rs  model.rs
scrape/src/recent_release/: mod.rs  model.rs
scrape/src/search/: mod.rs  model.rs
server/: Cargo.toml
server/src/: lib.rs
src/: main.rs
