[package]
name = "gogoanime-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrape = { path = "scrape/" }
serde_json = "1.0"
serde = { version = "1.0.210", features = ["derive"] }
actix-web = "4"
